<resources>
    <string name="app_name">Chat App</string>
    <string name="log_out">Log Out</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="boost_chat">Boost Chat</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="display_name">Display Name</string>
    <string name="confirm_password">Confirm_password</string>
    <string name="create_account">Create Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
</resources>
